Update README with link to the paper and some info about command line options.

--- a/README.html
+++ b/README.html
@@ -9,6 +9,19 @@
 <body>
 <h1 id="造倉庫-zōsōko">造倉庫 Zōsōko</h1>
 <p>Sōkoban puzzle generator</p>
+<h2 id="options">Options</h2>
+<ul>
+<li>-width=W Sets the width of generated puzzles. Must be a multiple of 3.</li>
+<li>-height=H Sets the height of generated puzzles. Must be a multiple of 3.</li>
+<li>-boxes=N Sets the number of boxes and goals in generated puzzles.</li>
+<li>-unbounded Allow the player to walk around outside the bounds of the puzzle.</li>
+</ul>
 <h2 id="todo">TODO</h2>
+<p>TODO</p>
+<h2 id="links">Links</h2>
+<p>The paper this project is based on:</p>
+<ul>
+<li><a href="http://larc.unt.edu/ian/pubs/GAMEON-NA_METH_03.pdf">http://larc.unt.edu/ian/pubs/GAMEON-NA_METH_03.pdf</a></li>
+</ul>
 </body>
 </html>
