Implement state expansion. Generates some really stupid puzzles.

--- a/README.html
+++ b/README.html
@@ -15,6 +15,16 @@
 <li>-height=H Sets the height of generated puzzles. Must be a multiple of 3.</li>
 <li>-boxes=N Sets the number of boxes and goals in generated puzzles.</li>
 <li>-unbounded Allow the player to walk around outside the bounds of the puzzle.</li>
+<li>-test Always generates the puzzle designed for testing the renderer and controller.</li>
+<li>-limit-goal-experiments=N Limit the number of combinations of goals the generator tries for each map.</li>
+</ul>
+<h2 id="controls">Controls</h2>
+<ul>
+<li>Blue squares are boxes.</li>
+<li>The red circle is the player.</li>
+<li>Use the arrow keys to move the player and push boxes.</li>
+<li>Press R to reset the puzzle.</li>
+<li>Press F5 to generate a new puzzle.</li>
 </ul>
 <h2 id="todo">TODO</h2>
 <p>TODO</p>
