Treat boxes interchangeably.

--- a/README.html
+++ b/README.html
@@ -27,7 +27,10 @@
 <li>Press F5 to generate a new puzzle.</li>
 </ul>
 <h2 id="todo">TODO</h2>
-<p>TODO</p>
+<ul>
+<li>Add optional limits to farthest state depth</li>
+<li>Implement PuzzleGenerator.score()</li>
+</ul>
 <h2 id="links">Links</h2>
 <p>The paper this project is based on:</p>
 <ul>
