Add -limit-depth=N option.

--- a/README.html
+++ b/README.html
@@ -17,6 +17,7 @@
 <li>-unbounded Allow the player to walk around outside the bounds of the puzzle.</li>
 <li>-test Always generates the puzzle designed for testing the renderer and controller.</li>
 <li>-limit-goal-experiments=N Limit the number of combinations of goals the generator tries for each map.</li>
+<li>-limit-depth=N Limit the depth of the farthest state search.</li>
 </ul>
 <h2 id="controls">Controls</h2>
 <ul>
