Add the scoring metric (although box-lines seems to give the best results).

--- a/README.html
+++ b/README.html
@@ -18,6 +18,7 @@
 <li>-test Always generates the puzzle designed for testing the renderer and controller.</li>
 <li>-limit-goal-experiments=N Limit the number of combinations of goals the generator tries for each map.</li>
 <li>-limit-depth=N Limit the depth of the farthest state search.</li>
+<li>-box-lines Sets the scoring metric to purely box-lines rather than the default based on the paper.</li>
 </ul>
 <h2 id="controls">Controls</h2>
 <ul>
