--- a/README.html
+++ b/README.html
@@ -20,6 +20,7 @@
 <li>-limit-depth=N Limit the depth of the farthest state search.</li>
 <li>-box-lines Sets the scoring metric to purely box-lines rather than the default based on the paper.</li>
 </ul>
+<p>The best results seem to be given with -box-lines.</p>
 <h2 id="controls">Controls</h2>
 <ul>
 <li>Blue squares are boxes.</li>
@@ -30,11 +31,13 @@
 </ul>
 <h2 id="todo">TODO</h2>
 <ul>
-<li>Add optional limits to farthest state depth</li>
-<li>Implement PuzzleGenerator.score()</li>
+<li>Needs significant clean-up.</li>
+<li>Profiling indicates the slowest part is PuzzleMap.getPlayerSpacePartition(). The use of this can be eliminated entirely by implementing the suggestions in PlayerCloud, or maybe there is a way to speed it up?</li>
+<li>After that is Coords.add, which must mean that there are no further bottlenecks.</li>
+<li>See if making FarthestStateFinder.go return a set of states would make the default scoring metric work better.</li>
 </ul>
 <h2 id="links">Links</h2>
-<p>The paper this project is based on:</p>
+<p>The paper this library is based on:</p>
 <ul>
 <li><a href="http://larc.unt.edu/ian/pubs/GAMEON-NA_METH_03.pdf">http://larc.unt.edu/ian/pubs/GAMEON-NA_METH_03.pdf</a></li>
 </ul>
